# PyMPDATA-examples

./: .gitignore  README.md  index.html  setup.py  test-time-requirements.txt
.github/workflows/: main.yml  pdoc.yml  pylint.yml  tests+pypi.yml
Arabas_and_Farhat_2020/: Bjerksund_and_Stensland_1993.html  Black_Scholes_1973.html  analysis_figures_2_and_3.html  analysis_table_1.html  index.html  options.html  setup1_european_corridor.html  setup2_american_put.html  simulation.html
Jarecka_et_al_2015/: analytic_equations.html  formulae.html  index.html  plot_output.html  settings.html  simulation.html
Molenkamp_test_as_in_Jaruga_et_al_2015_Fig_12/: analysis.html  index.html  simulation.html
Olesik_et_al_2020/: East_and_Marshall_1954.html  analysis.html  coordinates.html  distributions.html  equilibrium_drop_growth.html  index.html  plotter.html  settings.html  simulation.html  wall_time.html
Olesik_et_al_2020/physics/: East_and_Marshall_1954.html  equilibrium_drop_growth.html  index.html
PyMPDATA_examples/Arabas_and_Farhat_2020/: demo.ipynb  (+11 more)
PyMPDATA_examples/Bartman_et_al_2022/: CMakeLists.txt  __init__.py  fig_X.ipynb  revolving_sphere_3d.cpp  revolving_sphere_3d.py
Shipway_and_Hill_2012/: droplet_activation.html  formulae.html  index.html  mpdata.html  plot.html  settings.html
Smolarkiewicz_1984/: settings.html  simulation.html
Smolarkiewicz_2006_Figs_3_4_10_11_12/: index.html  simulation.html
tests/: test_discretisation.py  test_run_notebooks.py  test_todos_annotated.py
utils/: discretisation.html  index.html  nondivergent_vector_field_2d.html
(+54 files in other folders)
